qt_gui-moc.cpp: qt_gui.h qt_gui.cpp
	$(QT_PREFIX)/bin/moc -o $@ $<

if WITH_LIVE
extra_live_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_live.a
liveincludes = -I$(LIVE_ROOT)/BasicUsageEnvironment/include \
			   -I$(LIVE_ROOT)/groupsock/include \
			   -I$(LIVE_ROOT)/liveMedia/include \
			   -I$(LIVE_ROOT)/UsageEnvironment/include

livelibs = -L$(LIVE_ROOT)/liveMedia/ -lliveMedia \
			  -L$(LIVE_ROOT)/BasicUsageEnvironment/ -lBasicUsageEnvironment  \
			  -L$(LIVE_ROOT)/groupsock/ -lgroupsock  \
			  -L$(LIVE_ROOT)/UsageEnvironment/ -lUsageEnvironment
extra_live_DEFINES=-DWITH_LIVE
else
extra_live_DEFINES=
extra_live_LDADD =
liveincludes =
livelibs =
endif

bin_PROGRAMS = AmbulantPlayer_qt

AmbulantPlayer_qt_SOURCES =					\
	qt_gui.cpp						\
	qt_gui.h 						\
	qt_logger.cpp	 					\
	qt_logger.h						\
	qt_mainloop.cpp 					\
	qt_mainloop.h						\
	qt_settings.cpp 					\
	qt_settings.h 						\
	unix_preferences.cpp					\
	unix_preferences.h



# Conditionals for linux audio support
if WITH_SDL
extra_sdl_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_sdl.a
extra_sdl_DEFINES=-DWITH_SDL
extra_sdl_ldflags= `sdl-config --libs`
else
extra_sdl_ldflags=
extra_sdl_DEFINES=
endif

if WITH_EXPAT
extra_expat_DEFINES=-I$(EXPAT_PREFIX)/include -DWITH_EXPAT
extra_expat_LDADD=-L$(EXPAT_PREFIX)/lib -lexpat
else
extra_expat_DEFINES=
extra_expat_LDADD=
endif

if WITH_DIRAC
dirac_libraries=`pkg-config --libs dirac`
else
dirac_libraries=
endif

if WITH_FFMPEG
extra_ffmpeg_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_ffmpeg.a $(FFMPEG_LIBS) -lz -lbz2 -lfaad
extra_ffmpeg_ldflags=$(dirac_libraries)
extra_ffmpeg_DEFINES=-DWITH_FFMPEG -DWITH_FFMPEG_AVFORMAT $(FFMPEG_CFLAGS)
else
extra_ffmpeg_LDADD=
extra_ffmpeg_ldflags=
extra_ffmpeg_DEFINES=
endif

if WITH_XERCES_BUILTIN
extra_xerces_DEFINES=-I$(XERCES_PREFIX)/include -DWITH_XERCES_BUILTIN
extra_xerces_LDADD=-L$(XERCES_PREFIX)/lib -lxerces-c
else
extra_xerces_DEFINES=
extra_xerces_LDADD=
endif

#if USE_NLS
extra_nls_DEFINES=-DLOCALEDIR=\"$(datadir)/locale\"
#else
#extra_nls_DEFINES=
#endif

if WITH_QTOPIA
qt_libs=-L$(QT_PREFIX)/lib -lqpe -lqte
qt_includes=-I$(QT_PREFIX)/include -I$(QT_PREFIX)/include/qpe
else
qt_includes=$(LIBQT_INCLUDES)
qt_libs=$(LIBQT_LIBS)
endif

LDADD = $(top_builddir)/src/libambulant/.libs/libambulant_qt.a	\
	$(extra_expat_LDADD)					\
	$(extra_sdl_LDADD)					\
	$(extra_live_LDADD) 					\
	$(extra_ffmpeg_LDADD)					\
	$(extra_xerces_LDADD)					\
	$(top_builddir)/src/libambulant/.libs/libambulant.a	\
	$(qt_libs)						\
	$(LIBLTDL)  

AM_LDFLAGS= \
	   $(extra_sdl_ldflags)					\
	   $(extra_ffmpeg_ldflags)				\
       	   $(livelibs)						\
	   -export-dynamic
 
AM_CPPFLAGS = \
		-DAMBULANT_DATADIR=\"$(pkgdatadir)\"		\
		$(extra_sdl_DEFINES)				\
		$(extra_ffmpeg_DEFINES)				\
		$(extra_nls_DEFINES)				\
		$(extra_xerces_DEFINES)				\
		$(extra_live_DEFINES)				\
		-I$(top_builddir)/include			\
		-I$(top_srcdir)/include				\
		-I$(top_builddir)/include/ambulant/gui/qt	\
		-I$(top_srcdir)/include/ambulant/gui/qt		\
	    $(EXPAT_INCLUDES) 	                                \
	    $(XERCES_INCLUDES) 	                                \
	    $(qt_includes) \
	    $(liveincludes)
	  
# file generated by "moc"
CLEANFILES=qt_gui-moc.cpp
nodist_AmbulantPlayer_qt_SOURCES=qt_gui-moc.cpp

# (temporary) add link for AmbulantPlayer_qt as the default player
install-exec-hook:
	cd $(DESTDIR)$(bindir) && \
	$(LN_S) -f $(bin_PROGRAMS) AmbulantPlayer

uninstall-hook:
	rm -f AmbulantPlayer
