qt_gui-moc.cpp: qt_gui.h qt_gui.cpp
	$(QT_PREFIX)/bin/moc -o $@ $<


bin_PROGRAMS = AmbulantPlayer_qt

AmbulantPlayer_qt_SOURCES = \
	qt_gui.cpp \
	qt_gui.h \
	qt_logger.cpp \
	qt_logger.h \
	qt_mainloop.cpp \
	qt_mainloop.h \
	qt_settings.cpp \
	qt_settings.h \
	unix_preferences.cpp \
	unix_preferences.h
	

#
# Conditionals for various third party libraries
#
if WITH_EXPAT
extra_expat_DEFINES=$(EXPAT_CFLAGS) -DWITH_EXPAT
extra_expat_LDADD=$(EXPAT_LIBS)
else
extra_expat_DEFINES=
extra_expat_LDADD=
endif

if WITH_FFMPEG
extra_ffmpeg_DEFINES=-DWITH_FFMPEG $(FFMPEG_CFLAGS)
extra_ffmpeg_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_ffmpeg.a $(FFMPEG_LIBS)
else
extra_ffmpeg_DEFINES=
extra_ffmpeg_LDADD=
endif

if WITH_LIVE
extra_live_DEFINES=$(LIVE_CFLAGS) -DWITH_LIVE
extra_live_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_live.a $(LIVE_LIBS)
else
extra_live_DEFINES=
extra_live_LDADD =
endif

if WITH_SDL
extra_sdl_DEFINES=$(SDL_CFLAGS) -DWITH_SDL
extra_sdl_LDADD=$(top_builddir)/src/libambulant/.libs/libambulant_sdl.a $(SDL_LIBS)
else
extra_sdl_DEFINES=
extra_sdl_LDADD=
endif

if WITH_XERCES_BUILTIN
extra_xerces_DEFINES=$(XERCES_CFLAGS) -DWITH_XERCES_BUILTIN
extra_xerces_LDADD=$(XERCES_LIBS)
else
extra_xerces_DEFINES=
extra_xerces_LDADD=
endif

#if USE_NLS
extra_nls_DEFINES=-DLOCALEDIR=\"$(datadir)/locale\"
#else
#extra_nls_DEFINES=
#endif

LDADD = \
	$(top_builddir)/src/libambulant/.libs/libambulant_qt.a \
	$(extra_expat_LDADD) \
	$(extra_ffmpeg_LDADD) \
	$(extra_live_LDADD) \
	$(extra_sdl_LDADD) \
	$(extra_xerces_LDADD) \
	$(top_builddir)/src/libambulant/.libs/libambulant.a \
	$(QT_LIBS) \
	$(LIBLTDL)  

AM_LDFLAGS= \
	$(extra_sdl_ldflags) \
	$(extra_ffmpeg_ldflags) \
	$(livelibs) \
	-export-dynamic
 
AM_CPPFLAGS = \
	-DAMBULANT_DATADIR=\"$(pkgdatadir)\" \
	$(extra_expat_DEFINES) \
	$(extra_ffmpeg_DEFINES) \
	$(extra_nls_DEFINES) \
	$(extra_sdl_DEFINES) \
	$(extra_xerces_DEFINES) \
	$(extra_live_DEFINES) \
	-I$(top_builddir)/include \
	-I$(top_srcdir)/include \
	-I$(top_builddir)/include/ambulant/gui/qt \
	-I$(top_srcdir)/include/ambulant/gui/qt \
	$(QT_CFLAGS)
	  
# file generated by "moc"
CLEANFILES=qt_gui-moc.cpp
nodist_AmbulantPlayer_qt_SOURCES=qt_gui-moc.cpp

# (temporary) add link for AmbulantPlayer_qt as the default player
install-exec-hook:
	cd $(DESTDIR)$(bindir) && \
	$(LN_S) -f $(bin_PROGRAMS) AmbulantPlayer

uninstall-hook:
	rm -f AmbulantPlayer
