

EXTRA_DIST=Ambulant.png AmbulantDoc.png ambulant.schemas ambulant-kde.desktop
ambulantlibdir=$(top_builddir)/src/libambulant/.libs
if WITH_AMBULANT_SHARED_LIB
# If we link with shared libs: use these. Needed for plugin support.
libambulant_core=-L$(ambulantlibdir) -lambulant
libambulant_ffmpeg=-L$(ambulantlibdir) -lambulant_ffmpeg
libambulant_sdl=-L$(ambulantlibdir) -lambulant_sdl
libambulant_qt=-L$(ambulantlibdir) -lambulant_qt
else
# Otherwise we link the ambulant libraries statically.
libambulant_core=$(ambulantlibdir)/libambulant.a
libambulant_ffmpeg=$(ambulantlibdir)/libambulant_ffmpeg.a
libambulant_sdl=$(ambulantlibdir)/libambulant_sdl.a
libambulant_qt=$(ambulantlibdir)/libambulant_qt.a
endif


# This target is magic for automake
check-am: check-ambulantplayer_qt

qt_gui-moc.cpp: qt_gui.h qt_gui.cpp
	$(QT_PREFIX)/bin/moc -o $@ $<


bin_PROGRAMS = AmbulantPlayer_qt

AmbulantPlayer_qt_SOURCES = \
	qt_gui.cpp \
	qt_gui.h \
	qt_logger.cpp \
	qt_logger.h \
	qt_mainloop.cpp \
	qt_mainloop.h \
	qt_settings.cpp \
	qt_settings.h \
	unix_preferences.cpp \
	unix_preferences.h


#
# Conditionals for various third party libraries
#
if WITH_EXPAT
extra_expat_DEFINES=$(EXPAT_CFLAGS) -DWITH_EXPAT
extra_expat_LDADD=$(EXPAT_LIBS)
else
extra_expat_DEFINES=
extra_expat_LDADD=
endif

if WITH_FFMPEG
extra_ffmpeg_DEFINES=-DWITH_FFMPEG $(FFMPEG_CFLAGS)
extra_ffmpeg_LDADD=$(libambulant_ffmpeg) $(FFMPEG_LIBS)
else
extra_ffmpeg_DEFINES=
extra_ffmpeg_LDADD=
endif

if WITH_SDL
extra_sdl_DEFINES=$(SDL_CFLAGS) -DWITH_SDL
extra_sdl_LDADD=$(libambulant_sdl) $(SDL_LIBS)
else
extra_sdl_DEFINES=
extra_sdl_LDADD=
endif

if WITH_GCD_EVENT_PROCESSOR
extra_gcd_LDADD=$(GCD_LIBS)
else
extra_gcd_LDADD=
endif

if WITH_XERCES_BUILTIN
extra_xerces_DEFINES=$(XERCES_CFLAGS) -DWITH_XERCES_BUILTIN
extra_xerces_LDADD=$(XERCES_LIBS)
else
extra_xerces_DEFINES=
extra_xerces_LDADD=
endif

#if USE_NLS
extra_nls_DEFINES=-DLOCALEDIR=\"$(datadir)/locale\"
#else
#extra_nls_DEFINES=
#endif

LDADD = \
	$(libambulant_qt) \
	$(extra_expat_LDADD) \
	$(extra_ffmpeg_LDADD) \
	$(extra_sdl_LDADD) \
	$(extra_gcd_LDADD) \
	$(extra_xerces_LDADD) \
	$(libambulant_core) \
	$(QT_LIBS) \
	$(PTHREAD_LIBS) \
	$(LIBLTDL)  

AM_LDFLAGS= \
	$(extra_sdl_ldflags) \
	$(extra_ffmpeg_ldflags) \
	-export-dynamic

AM_CPPFLAGS = \
	-DAMBULANT_DATADIR=\"$(pkgdatadir)\" \
	$(extra_expat_DEFINES) \
	$(extra_ffmpeg_DEFINES) \
	$(extra_nls_DEFINES) \
	$(extra_sdl_DEFINES) \
	$(extra_xerces_DEFINES) \
	-I$(top_builddir)/include \
	-I$(top_srcdir)/include \
	-I$(top_builddir)/include/ambulant/gui/qt \
	-I$(top_srcdir)/include/ambulant/gui/qt \
	$(QT_CFLAGS)

# file generated by "moc"
CLEANFILES=qt_gui-moc.cpp
nodist_AmbulantPlayer_qt_SOURCES=qt_gui-moc.cpp

# (temporary) add link for AmbulantPlayer_qt as the default player
install-exec-hook:
	cd $(DESTDIR)$(bindir) && \
	$(LN_S) -f $(bin_PROGRAMS) AmbulantPlayer
	GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` gconftool-2 --makefile-install-rule $(srcdir)/ambulant.schemas
##	gconftool-2 -s /desktop/gnome/url-handlers/ambulant/enabled --type Boolean true
###	gconftool-2 -s /desktop/gnome/url-handlers/ambulant/command "$(DESTDIR)$(bindir)/AmbulantPlayer  %s" --type String

uninstall-hook:
	rm -f AmbulantPlayer

check-ambulantplayer_qt:
	if test x$$DISPLAY = x; then \
		echo Skipping tests, DISPLAY not set; \
	else \
		set -e; \
		set +x; \
		pyv=`$(PYTHON) -V 2>&1 | sed -e 's/Python \([1-9].[1-9]\).*/\1/'`; \
		pyp=`$(PYTHON) -c 'import sys; print sys.prefix'`; \
		lib=/lib; \
		if test `uname -p` = "x86_64"; then lib=/lib64; fi;\
		export AMBULANT_PLUGIN_DIR=$(top_srcdir)/src/pyambulant/test; \
		export PYTHONPATH=:$(top_srcdir)/src/pyambulant/build/lib.*; \
		export LD_PRELOAD=$$pyp/$$lib/python$$pyv/config/libpython$$pyv.so; \
		./AmbulantPlayer_qt $(top_srcdir)/Extras/Welcome/Welcome.smil; \
		if test -e AM_TEST-output.txt; then cat AM_TEST-output.txt; fi \
	fi

uninstall-local:
#XXXX quick fix to make distcheck work: remove make check results
	-rm -fr AM_TEST-output.txt 
	-rm -f $(DESTDIR)$(datadir)/applications/ambulant-kde.desktop

install-data-local:
	mkdir -p  $(DESTDIR)$(datadir)/applications
	cp $(srcdir)/ambulant-kde.desktop $(DESTDIR)$(datadir)/applications

