library_includedir=$(includedir)/ambulant/common
library_include_HEADERS= \
	factory.h \
	layout.h \
	playable.h \
	player.h \
	preferences.h \
	region_dim.h \
	region_eval.h \
	region_info.h \
	region.h \
	renderer_impl.h \
	schema.h \
	smil_alignment.h \
	smil_handler.h \
	embedder.h \
	plugin_engine.h \
	trace_playable.h \
	video_renderer.h
	
