library_includedir=$(includedir)/ambulant/common
library_include_HEADERS= \
	factory.h \
	gui_player.h \
	layout.h \
	playable.h \
	player.h \
	preferences.h \
	recorder.h \
	region_dim.h \
	region_eval.h \
	region_info.h \
	region.h \
	renderer_impl.h \
	renderer_select.h \
	schema.h \
	state.h \
	smil_alignment.h \
	smil_handler.h \
	embedder.h \
	plugin_engine.h \
	trace_playable.h \
	video_renderer.h

