SUBDIRS=unix
library_includedir=$(includedir)/ambulant/lib
library_include_HEADERS= \
	abstract_mtsync.h \
	asb.h \
	basic_types.h \
	callback.h \
	colors.h \
	delta_timer.h \
	document.h \
	event_processor.h \
	event.h \
	expat_parser.h \
	filesys.h \
	gtypes.h \
	logger.h \
	mtsync.h \
	node_iterator.h \
	node_navigator.h \
	node.h \
	nscontext.h \
	refcount.h \
	sax_handler.h \
	sax_types.h \
	string_util.h \
	thread.h \
	timer.h \
	tree_builder.h \
	vnode.h
