SUBDIRS=unix
library_includedir=$(includedir)/ambulant/lib
library_include_HEADERS= \
	abstract_mtsync.h \
	asb.h \
	basic_types.h \
	callback.h \
	colors.h \
	delta_timer.h \
	document.h \
	event_processor.h \
	event.h \
	expat_parser.h \
	filesys.h \
	gtypes.h \
	layout.h \
	logger.h \
	mtsync.h \
	nfa.h \
	node_iterator.h \
	node_navigator.h \
	node.h \
	nscontext.h \
	parselets.h \
	playable.h \
	player.h \
	refcount.h \
	sax_handler.h \
	sax_types.h \
	schema.h \
	smil_time.h \
	string_util.h \
	sync_rule.h \
	test_attrs.h \
	thread.h \
	time_attrs.h \
	time_node.h \
	time_state.h \
	timegraph.h \
	timer.h \
	trace_playable.h \
	trace_player.h \
	tree_builder.h

