library_includedir=$(includedir)/ambulant/net
library_include_HEADERS= \
	connection.h \
	datasource.h \
	databuffer.h \
	demux_datasource.h \
	posix_datasource.h \
	socket.h \
	stdio_datasource.h \
	url.h \
	ffmpeg_common.h \
	ffmpeg_audio.h \
	ffmpeg_video.h \
	ffmpeg_factory.h \
	ffmpeg_raw.h \
	win32_datasource.h
