library_includedir=$(includedir)/ambulant/smil2
library_include_HEADERS= \
	animate_a.h \
	animate_e.h \
	animate_f.h \
	animate_n.h \
	params.h \
	region_node.h \
	smiltext.h \
	smil_layout.h \
	smil_player.h \
	smil_time.h \
	sync_rule.h \
	test_attrs.h \
	time_attrs.h \
	time_calc.h \
	time_nctx.h \
	time_node.h \
	time_sched.h \
	time_state.h \
	timegraph.h \
	trace_player.h \
	transition.h
	